--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <!--product-details-------->
                     <div class="product-details">
-                        <a href="#" class="p-name">Dried Banana</a>
+                        <a href="product_detail.html" class="p-name">Dried Banana</a>
                         <span class="p-price">$15.00</span>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Dried Blueberries</a>
+                    <a href="product_detail.html" class="p-name">Dried Blueberries</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Dried Apple</a>
+                    <a href="product_detail.html" class="p-name">Dried Apple</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -235,7 +235,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Dried Stawberries</a>
+                    <a href="product_detail.html" class="p-name">Dried Stawberries</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Dried Walnuts</a>
+                    <a href="product_detail.html" class="p-name">Dried Walnuts</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Fruits</a>
+                    <a href="product_detail.html" class="p-name">Fruits</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Fruits</a>
+                    <a href="product_detail.html" class="p-name">Fruits</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -353,7 +353,7 @@
                   </div>
                   <!--product-details-------->
                   <div class="product-details">
-                      <a href="#" class="p-name">Spiced Peanuts</a>
+                      <a href="product_detail.html" class="p-name">Spiced Peanuts</a>
                       <span class="p-price">$22.00</span>
                   </div>
               </div>
@@ -368,7 +368,7 @@
                     </div>
                     <!--product-details-------->
                     <div class="product-details">
-                        <a href="#" class="p-name">Almond</a>
+                        <a href="product_detail.html" class="p-name">Almond</a>
                         <span class="p-price">$22.00</span>
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Seeds Are Cheap</a>
+                    <a href="product_detail.html" class="p-name">Seeds Are Cheap</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
@@ -398,7 +398,7 @@
                 </div>
                 <!--product-details-------->
                 <div class="product-details">
-                    <a href="#" class="p-name">Roasted Cashew Nuts</a>
+                    <a href="product_detail.html" class="p-name">Roasted Cashew Nuts</a>
                     <span class="p-price">$22.00</span>
                 </div>
             </div>
