--- a/product1.html
+++ b/product1.html
@@ -161,7 +161,7 @@
                   <a href="product_detail.html">Raisins</a>
                 </h4>
                 <h5>$22.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Raisins is the best handpicked dry grapes for consuming</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -177,7 +177,7 @@
                   <a href="product_detail.html">Dried Banana</a>
                 </h4>
                 <h5>$15.00</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Turn over-ripe bananas into baked banana chips! This snack is easy to make and perfect for dipping with salsa, guacamole, or hummus!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -193,7 +193,7 @@
                   <a href="product_detail.html">Dried Blueberries</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">blueberries are dried and preserved in bulk and are popular across the world.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -209,7 +209,7 @@
                   <a href="product_detail.html">Dried Apple</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text"> No Sugar added from Superior Nuts. Superior was founded over 80 years ago on the premise of fresh quality nuts, dried fruits and chocolates served locally.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -225,7 +225,7 @@
                   <a href="product_detail.html">Dried Strawberries</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Absolutely NO additives or preservatives - a natural, healthy, delicious fruit snack made from real fruit and packed with the same nutrition as fresh fruit.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -241,7 +241,7 @@
                   <a href="product_detail.html">Dried Walnuts</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Walnuts have higher antioxidant activity than any other common nut.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
