--- a/product2.html
+++ b/product2.html
@@ -158,11 +158,10 @@
               <a href="product_detail.html"><img class="card-img-top" src="images/p43.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="product_detail.html">Spiced Peanuts
-</a>
+                  <a href="product_detail.html">Spiced Peanuts</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Super extra-large Virginia Peanuts, seasoned with the pungent flavor of horseradish.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -178,7 +177,7 @@
                   <a href="product_detail.html">Almond</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">1 ounce of almonds, or about 23 almond nuts, is the ideal daily portion recommended by the Dietary Guidelines for Americans.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -194,7 +193,7 @@
                   <a href="product_detail.html">Seeds Are Cheap</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Our top quality cheap seeds germinate just as reliably as well-known brands but cost a fraction of the price.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -210,7 +209,7 @@
                   <a href="product_detail.html">Roasted Cashew Nuts</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Roasted cashew nuts are one of the easiest and quickest snacks to throw together for entertaining.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -226,7 +225,7 @@
                   <a href="product_detail.html">Macca Nuts</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Macadamia nuts are incredibly tough to crack, even if they've been boiled or roasted first.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -239,10 +238,10 @@
               <a href="product_detail.html"><img class="card-img-top" src="images/p47.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="product_detail.html#">Dried soybeans</a>
+                  <a href="product_detail.html#">Dried Soybeans</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Newest crop, for the best nutrition and taste. The only soybean tells you name of the farm and farmer.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
