--- a/product_detail.html
+++ b/product_detail.html
@@ -194,13 +194,13 @@
 
           <div class = "social-links">
             <p>Share At: </p>
-            <a href = "#">
+            <a href = "https://www.facebook.com/trancong.minh.79/">
               <i class = "fab fa-facebook-f"></i>
             </a>
-            <a href = "#">
+            <a href = "https://twitter.com/">
               <i class = "fab fa-twitter"></i>
             </a>
-            <a href = "#">
+            <a href = "https://www.instagram.com/">
               <i class = "fab fa-instagram"></i>
             </a>
           </div>
